--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio-website",
   "version": "0.1.0",
-  "homepage": "http://vedantnaik19.github.io/portfolio-website",
+  "homepage": "https://vedantnaik19.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
