--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "firebase build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
